--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "4.4.3"        
+  },
   "dependencies": {
     "body-parser": "~1.13.2",
     "bookshelf": "^0.9.4",
